2004-12-19  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/cellrenderer.hg: Added stop_editing() which replaces the 
	now-deprecated editing_cancelled().
	* gtk/src/iconview.hg: Added get/set_columns(), get/set_item_width(),
	get/set_spacing(), get/set_row_spacing(), get/set_column_spacing(), 
	get/set_margin().
	* gtk/src/label.hg: Added get/set_max_chars_width(), and property.
	* gtk/src/textview.hg: Added get_iter_at_position().
	* gdk/src/gdk_docs.xml, pango/src/pango_docs.xml, 
	gtk/src/gtk_docs.xml: Regenerated with docextract_to_xm.py, to get 
	new GTK+ documentation.

2004-12-19  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/filechooserbutton.hg: Constructors: Added action parameters, 
	because they have been added to the GTK+ API.
	* gtk/src/gtk_methods.defs: Regenerated with h2defs.py

2004-12-16  Murray Cumming  <murrayc@murrayc.com>
 
 	* examples/book/dialogs/messagedialog/examplewindow.cc: The 
 	ButtonsType enum is not an ORable flag.
 	* docs/tutorial/gtkmm-tut.xml: Fix the text where it says that it is.

2004-12-16  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/cellview.hg: Remove set_value(), because it has been 
	removed from GTK+. This fixes the build. Now inherits from the 
	CellLayout interface. Added text and pixbuf constructors, to match 
	the C _new conveience functions.

2.5.2:
	
2004-12-04  Roger Leigh  <roger@whinlatter.uklinux.net>

	* configure.in: Bug #160244: Ask automake to use the utar format, to 
	fix the problems with the long filenames of our documentation in the 
	tarballs.

2004-12-03  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/treeview.hg: Added append_column_numeric() which allows you 
	to specify a printf-style format string for the View column, and 
	append_column_numeric_editable() which does the same, and auto-stores 
	decimal input. Updated the append_column() documentation to improve 
	the explanation of supported types, and to suggest use of 
	append_column_numeric().