@@ -1,3 +1,8 @@
+2004-12-19 Claudio Saavedra <csaavedra@alumnos.utalca.cl>
+ 	
+ 	* example/book/input/main.cc: Improved example to use a 
+ 	Glib::IOChannel. References bug #138259.
+
 2004-12-19  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/cellrenderer.hg: Added stop_editing() which replaces the 
